--- a/docs/docs.css
+++ b/docs/docs.css
@@ -67,6 +67,13 @@ code * {
 /* TODO: bracket colors? */
 
 /* theme creator */
+.theme-creator-page {
+  display: flex;
+  align-items: flex-start;
+}
+.oklch-input {
+  --inputWidth: 600px;
+}
 .color-circle-wrapper {
   width: var(--inputWidth);
   height: var(--inputWidth);
@@ -75,11 +82,12 @@ code * {
 .color-circle-wrapper canvas {
   width: 100%;
   height: 100%;
+  cursor: crosshair;
 }
 .color-circle-dot {
   border-radius: 50%;
-  border: .5px solid #7f7f7f;
-  background: black;
+  outline: .5px solid #202020; /* TODO: make this invert the background? */
+  background: white;
   position: absolute;
   width: 2px;
   height: 2px;
